# itprojektEFT

./: README.md
BogofilterRepos/bogofilter-1.2.4/: Makefile.in  aclocal.m4  bogofilter.spec  configure
BogofilterRepos/bogofilter-1.2.4/doc/: Makefile.in
BogofilterRepos/bogofilter-1.2.4/src/: lexer.c  lexer.h  lexer_v3.l  token.c
BogofilterRepos/bogofilter-1.2.4/src/tests/: Makefile.in
BogofilterRepos/bogofilter-1.2.4/trio/: Makefile.in
Docs/Bene_Docs/Bogofilter Aufbau - Bogoutil Doku - EFT-22/: Bogoutil
Docs/Bene_Docs/Bogoutil - EFT/: bogoutil.aux  bogoutil.tex  bogoutil.tex.bak
Docs/Bene_Docs/Einrichtung - Infrastruktur für Projektarbeit - EFT-21/: EFT-21.aux  EFT-21.tex  EFT-21.tex.bak
Docs/Req_for_Texmaker/: README.txt  example_template.tex.bak
bogofilter_repos/bogofilter-1.2.4/: CMakeLists.txt  configure.ac
bogofilter_repos/bogofilter-1.2.4/src/: Makefile.am  Makefile.in  lexer_v3.c  version.c
docs/Req_for_Texmaker (Konflikte durch Groß- und Kleinschreibung)/: example_template.tex.bak
docs/bh_docs/eft-21_Einrichtung-infrastruktur_für_projektarbeit/: EFT-21.aux  EFT-21.dvi  EFT-21.tex
