cmake_minimum_required(VERSION 3.3)
project(bogofilter_1_2_4)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    contrib/bogogrep.c
    gnugetopt/getopt.c
    gnugetopt/getopt.h
    gnugetopt/getopt1.c
    gsl/cdf/chisq.c
    gsl/cdf/gamma.c
    gsl/err/error.c
    gsl/err/stream.c
    gsl/specfunc/cheb_eval.c
    gsl/specfunc/chebyshev.h
    gsl/specfunc/check.h
    gsl/specfunc/elementary.c
    gsl/specfunc/erfc.c
    gsl/specfunc/error.h
    gsl/specfunc/eval.h
    gsl/specfunc/exp.c
    gsl/specfunc/expint.c
    gsl/specfunc/gamma.c
    gsl/specfunc/gamma_inc.c
    gsl/specfunc/log.c
    gsl/specfunc/psi.c
    gsl/specfunc/trig.c
    gsl/specfunc/zeta.c
    gsl/sys/coerce.c
    gsl/sys/fdiv.c
    gsl/sys/infnan.c
    gsl/sys/minmax.c
    gsl/sys/pow_int.c
    gsl/gsl_cdf.h
    gsl/gsl_errno.h
    gsl/gsl_machine.h
    gsl/gsl_math.h
    gsl/gsl_message.h
    gsl/gsl_nan.h
    gsl/gsl_pow_int.h
    gsl/gsl_precision.h
    gsl/gsl_sf_elementary.h
    gsl/gsl_sf_erf.h
    gsl/gsl_sf_exp.h
    gsl/gsl_sf_expint.h
    gsl/gsl_sf_gamma.h
    gsl/gsl_sf_log.h
    gsl/gsl_sf_pow_int.h
    gsl/gsl_sf_psi.h
    gsl/gsl_sf_result.h
    gsl/gsl_sf_trig.h
    gsl/gsl_sf_zeta.h
    gsl/gsl_sys.h
    gsl/gsl_types.h
    src/tests/abortme.c
    src/tests/ctype.c
    src/tests/deb64.c
    src/tests/dehex.c
    src/tests/deqp.c
    src/tests/dumbhead.c
    src/tests/escnp.c
    src/tests/leakmem.c
    src/tests/spam_header_name.c
    src/tests/u_fpe.c
    src/tests/wantcore.c
    src/base64.c
    src/base64.h
    src/bf_exit.c
    src/bftypes.h
    src/bogoconfig.c
    src/bogoconfig.h
    src/bogofilter.c
    src/bogofilter.h
    src/bogohist.c
    src/bogohist.h
    src/bogolexer.c
    src/bogomain.c
    src/bogomain.h
    src/bogoQDBMupgrade.c
    src/bogoreader.c
    src/bogoreader.h
    src/bogotune.c
    src/bogotune.h
    src/bogoutil.c
    src/bool.c
    src/bool.h
    src/bsdqueue.h
    src/buff.c
    src/buff.h
    src/charset.c
    src/charset.h
    src/chUnicodeTo866.h
    src/collect.c
    src/collect.h
    src/common.h
    src/configfile.c
    src/configfile.h
    src/configtest.c
    src/convert_charset.c
    src/convert_charset.h
    src/convert_unicode.c
    src/convert_unicode.h
    src/datastore.c
    src/datastore.h
    src/datastore_db.c
    src/datastore_db.h
    src/datastore_db_private.h
    src/datastore_db_trad.c
    src/datastore_db_trans.c
    src/datastore_dbcommon.h
    src/datastore_dummies.c
    src/datastore_opthelp_dummies.c
    src/datastore_qdbm.c
    src/datastore_qdbm.h
    src/datastore_qdbm_cmpkey.c
    src/datastore_sqlite.c
    src/datastore_tc.c
    src/datastore_txn_dummies.c
    src/db_lock.c
    src/db_lock.h
    src/debug.c
    src/debug.h
    src/debug.main.c
    src/error.c
    src/error.h
    src/fgetsl.c
    src/fgetsl.h
    src/find_home.c
    src/find_home.h
    src/find_home.test.c
    src/find_home_tildeexpand.c
    src/find_home_user.c
    src/format.c
    src/format.h
    src/getopt_long_chk.c
    src/globals.c
    src/globals.h
    src/iconvert.c
    src/iconvert.h
    src/lexer.c
    src/lexer.h
    src/lexer_v3.c
    src/listsort.c
    src/listsort.h
    src/longoptions.h
    src/main.c
    src/maint.c
    src/maint.h
    src/memcmp.c
    src/memdebug.c
    src/memdebug.h
    src/memstr.c
    src/memstr.h
    src/mime.c
    src/mime.h
    src/msgcounts.c
    src/msgcounts.h
    src/mxcat.c
    src/mxcat.h
    src/panicenv.c
    src/passthrough.c
    src/passthrough.h
    src/paths.c
    src/paths.h
    src/prob.c
    src/prob.h
    src/qp.c
    src/qp.h
    src/rand_sleep.c
    src/rand_sleep.h
    src/register.c
    src/register.h
    src/robx.c
    src/robx.h
    src/rstats.c
    src/rstats.h
    src/score.c
    src/score.h
    src/sighandler.c
    src/sighandler.h
    src/strerror.c
    src/strlcat.c
    src/strlcpy.c
    src/strtoul.c
    src/swap.h
    src/swap_32bit.c
    src/system.c
    src/system.h
    src/textblock.c
    src/textblock.h
    src/token.c
    src/token.h
    src/transaction.c
    src/transaction.h
    src/tunelist.c
    src/tunelist.h
    src/uudecode.c
    src/uudecode.h
    src/version.c
    src/word.c
    src/word.h
    src/wordhash.c
    src/wordhash.h
    src/wordhash.main.c
    src/wordlists.c
    src/wordlists.h
    src/wordlists_base.c
    src/wordlists_base.h
    src/xatof.c
    src/xatoi.c
    src/xatox.h
    src/xcalloc.c
    src/xmalloc.c
    src/xmalloc.h
    src/xmem_error.c
    src/xmemrchr.c
    src/xmemrchr.h
    src/xrealloc.c
    src/xstrdup.c
    src/xstrdup.h
    src/xstrlcat.c
    src/xstrlcat.h
    src/xstrlcpy.c
    src/xstrlcpy.h
    trio/regression.c
    trio/trio.c
    trio/trio.h
    trio/triodef.h
    trio/trionan.c
    trio/trionan.h
    trio/triop.h
    trio/triostr.c
    trio/triostr.h)

add_executable(bogofilter_1_2_4 ${SOURCE_FILES})